0.4.4
 - ref: address scipy deprecation warnings
 - ci: switch to Python 3.10
 - ci: minor cleanup
0.4.3
 - docs: added original meep C++ simulation files in "misc" (#14)
 - docs: add ``if __name__ == "__main__"`` guard to 3D backpropagation
   examples (#15)
0.4.2
 - build: migrate to GitHub Actions
 - build: setup.py test is deprecated
 - docs: refurbish docs
 - ref: change instances of np.int to int due to
   numpy deprecation warnings
0.4.1
 - setup: bump scipy to 1.4.0 (updated QHull in griddata)
0.4.0
 - BREAKING CHANGES:
   - renamed submodule `_preproc` to `_prepare_sino`
   - renamed submodule `_postproc` to `_translate_ri`
   - missing apple core correction is now applied to the
     object function (`f`) instead of the refractive index (`n`),
     which is the physically correct approach
   - default keyword for `padval` is now "edge"
     instead of `None`; the meaning is retained
 - enh: added symmetric histogram apple core correction method "sh"
 - fix: using "float32" dtype in 3D backpropagation lead to
   casting error in numexpr
 - enh: improve performance when padding is disabled
 - docs: minor update
0.3.0
 - feat: basic missing apple core correction (#6)
 - docs: reordered 3D examples (decreasing importance)
0.2.6
 - fix: make phase unwrapping deterministic
 - tests: remove one test of the 2D Fourier mapping algorithm due to
   instabilities in using scipy.interpolate.griddata
 - ref: use `empty_aligned` instead of deprecated `n_byte_align_empty`
 - docs: add hint for windows users how to run the 3D examples
0.2.5
 - fix: reconstruction volume rotated by 180° due to floating point
   inaccuracies (affects `backpropagate_3d_tilted`).
0.2.4
 - maintenance release
0.2.3
 - enh: employ slice-wise padding to reduce the memory usage (and
   possibly the computation time) of
   - basic 3D backpropagation algorithm (#7)
   - 3D backpropagation with a tilted axis of rotation (#9)
 - ref: replace asserts with raises (#8)