@@ -471,7 +471,6 @@ def backpropagate_3d(uSin, angles, res, nm, lD=0, coords=None,
     #    (especially for large transforms), but at the expense of
     #    several times longer planning time (especially for large
     #    transforms).
-    # print(inarr.flags)
 
     myifftw_plan = pyfftw.FFTW(inarr, inarr, threads=num_cores,
                                axes=(0, 1),
