@@ -1,0 +1,6 @@
+class DataUndersampledWarning(UserWarning):
+    pass
+
+
+class ImplementationAmbiguousWarning(UserWarning):
+    pass
